# AlienFX-Lights

./: .gitignore  CMakeLists.txt  README.md
assets/: Info.plist
docs/: aw920k-protocol.md
scripts/: make-appicon.ps1  make-icns.sh  make-ico.ps1
src/core/: AFXController.cpp  AFXController.h  AFXHidTransport.h  AlienFX_SDK.cpp  AlienFX_SDK.h  HidTransport_IOKit.mm  HidTransport_Win32.cpp  alienfx-controls.h
src/macos/: AppDelegate.h  AppDelegate.mm  main.mm
src/windows/: AlienFXLights.rc  Settings.cpp  Settings.h  TrayApp.cpp  TrayApp.h  app.manifest  main.cpp  resource.h
